Initial fix for product api
