# src/router/products/swagger/getProduct.yaml
@@ -16,9 +16,7 @@ components:
                 type: string
               price:
                 type: number
-              frontImage:
-                type: string
-              backImage:
+              categoryId:
                 type: string
     getProductWithInventoriesResponse:
       type: object
@@ -31,12 +29,8 @@ components:
           type: string
         price:
           type: number
-        frontImage:
-          type: string
-        backImage:
-          type: string
-        inventories:
-          type: array
+          inventories:
+            type: array
           items:
             type: object
             properties:
@@ -48,6 +42,10 @@ components:
                 type: string
               quantity:
                 type: integer
+              frontImage:
+                type: string
+              backImage:
+                type: string
 paths:
   /products:
     get:
